--- a/Classificação dos possíveis relacionamentos bancários dos adultos no Brasil por meio de machine learning. (2).ipynb
+++ b/Classificação dos possíveis relacionamentos bancários dos adultos no Brasil por meio de machine learning. (2).ipynb
@@ -116,11 +116,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: pandas in c:\\users\\gleyson lopes\\anaconda3\\lib\\site-packages (1.2.4)\n",
-      "Requirement already satisfied: pytz>=2017.3 in c:\\users\\gleyson lopes\\anaconda3\\lib\\site-packages (from pandas) (2021.1)\n",
-      "Requirement already satisfied: python-dateutil>=2.7.3 in c:\\users\\gleyson lopes\\anaconda3\\lib\\site-packages (from pandas) (2.8.1)\n",
-      "Requirement already satisfied: numpy>=1.16.5 in c:\\users\\gleyson lopes\\anaconda3\\lib\\site-packages (from pandas) (1.20.1)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\users\\gleyson lopes\\anaconda3\\lib\\site-packages (from python-dateutil>=2.7.3->pandas) (1.15.0)\n"
+      "Requirement already satisfied: pandas in c:\\users\\Andre RDS\\anaconda3\\lib\\site-packages (1.2.4)\n",
+      "Requirement already satisfied: pytz>=2017.3 in c:\\users\\Andre RDS\\anaconda3\\lib\\site-packages (from pandas) (2021.1)\n",
+      "Requirement already satisfied: python-dateutil>=2.7.3 in c:\\users\\Andre RDS\\anaconda3\\lib\\site-packages (from pandas) (2.8.1)\n",
+      "Requirement already satisfied: numpy>=1.16.5 in c:\\users\\Andre RDS\\anaconda3\\lib\\site-packages (from pandas) (1.20.1)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\Andre RDS\\anaconda3\\lib\\site-packages (from python-dateutil>=2.7.3->pandas) (1.15.0)\n"
      ]
     }
    ],
