Update Classificação dos possíveis relacionamentos bancários dos adultos no Brasil por meio de machine learning. (2).ipynb

--- a/Classificação dos possíveis relacionamentos bancários dos adultos no Brasil por meio de machine learning. (2).ipynb
+++ b/Classificação dos possíveis relacionamentos bancários dos adultos no Brasil por meio de machine learning. (2).ipynb
@@ -138,7 +138,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: numpy in c:\\users\\gleyson lopes\\anaconda3\\lib\\site-packages (1.20.1)\n"
+      "Requirement already satisfied: numpy in c:\\users\\Andre RDS\\anaconda3\\lib\\site-packages (1.20.1)\n"
      ]
     }
    ],
