Update Classificação dos possíveis relacionamentos bancários dos adultos no Brasil por meio de machine learning. (2).ipynb

--- a/Classificação dos possíveis relacionamentos bancários dos adultos no Brasil por meio de machine learning. (2).ipynb
+++ b/Classificação dos possíveis relacionamentos bancários dos adultos no Brasil por meio de machine learning. (2).ipynb
@@ -267,7 +267,7 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "data = pd.read_excel('C:/Users/Gleyson Lopes/OneDrive/Backup notebook/Escritorio/Projeto faculdade/data.xlsx')\n",
+    "data = pd.read_excel('C:/Users/Andre RDS/OneDrive/Backup notebook/Escritorio/Projeto faculdade/data.xlsx')\n",
     "data.head()"
    ]
   },
